sliding_window method works, although some parts are a stub. The major stubs are u_rhs, and compute_lambdas. Now, moving on to debug the notebook and construct E2E test.

--- a/Mean_Field_Test.ipynb
+++ b/Mean_Field_Test.ipynb
@@ -566,236 +566,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Small test for two agents\n",
-    "\n",
-    "- Add agents to blackboard and meanfield\n",
-    "- Run synchronizer to visit the agents"
+    "### Sliding Window method"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "bb = Blackboard()\n",
-    "# mean_field = MeanField()\n",
-    "\n",
-    "myAgent=Agent(bb, state_indices=[1], control_indices=[1])\n",
-    "myAgent2=Agent2(bb, state_indices=[1,2], control_indices=[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2]"
-      ]
-     },
-     "execution_count": 161,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "myAgent2.state_indices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 162,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "bb.update_q_p_u_dict(myAgent)\n",
-    "bb.update_q_p_u_dict(myAgent2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "q_p_u_dict = bb.q_p_u_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 164,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'p_l': {'1': 0, '2': 3},\n",
-       " 'p_mf': {'1': 0, '2': 1},\n",
-       " 'q_s': {'1': 0, '2': 2},\n",
-       " 'q_s_dot': {'1': 0, '2': 1},\n",
-       " 'u_s': {'1': 0}}"
-      ]
-     },
-     "execution_count": 164,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "q_p_u_dict\n",
-    "# this only tells us the values of each state/costate.  Does not tell us which ones correspond to which agent\n",
-    "# state_indices attribute of each agent tells us which states pertain to the agent"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "agents = [myAgent, myAgent2]\n",
-    "sync = Synchronizer(agents, bb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "q_mf, q_mf_dot, u_mf = get_blackboard_values(myAgent)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Try a very small test"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "Steps to test qp_rhs and u_rhs:\n",
-    "\n",
-    "- Give some arbitrary initial conditions\n",
-    "- create Agent\n",
-    "- create Blackboard\n",
-    "- create MeanField\n",
-    "- connect those three things above.\n",
-    "- somehow create a sliding window instance, or at least wrangle the Agent into a Sliding Window instance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 167,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'stop' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-167-86c4545cc7bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mstop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'stop' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "print stop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us = propagate_dynamics(myAgent)\n",
-    "# forgot to pass in 'u_s' as a keyword argument\n",
-    "qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2 = propagate_dynamics(myAgent2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Testing plan:\n",
-    "    - Test this on a few nonzero inputs\n",
-    "    - Test this on multidimensional state\n",
-    "    - Test this on multidimensional control\n",
-    "    - Get this working for multiple agents"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 169,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.  0.  0. -2.] [0.] [0.] [0.] [-1.] [array([0.])] [array([0.])] [array([0.])] [array([-1.])]\n",
-      "[ 0.         21.16546289  0.          0.40596919  0.         20.16546289\n",
-      "  0.        ] [0.         7.15453179] [0.        1.1035885] [0.         6.15453179] [0.] [array([0.        , 7.15453179])] [array([0.       , 1.1035885])] [array([0.        , 6.15453179])] [array([0.])]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us\n",
-    "\n",
-    "print qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Try another very small test\n",
-    "\n",
-    "- run propagation for Agent using multiple windows so we can test using initial values, etc.\n",
-    "- and we can also test all of the methods for the agent rather than only the one for \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Get sliding window working for multiple windows"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 173,
    "metadata": {
     "collapsed": false
    },
@@ -886,8 +662,164 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Small test for two agents\n",
+    "\n",
+    "- Add agents to blackboard and meanfield\n",
+    "- Run synchronizer to visit the agents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Steps to test qp_rhs and u_rhs:\n",
+    "\n",
+    "- Give some arbitrary initial conditions\n",
+    "- create Agent\n",
+    "- create Blackboard\n",
+    "- create MeanField\n",
+    "- connect those three things above.\n",
+    "- somehow create a sliding window instance, or at least wrangle the Agent into a Sliding Window instance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 181,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "bb = Blackboard()\n",
+    "# mean_field = MeanField()\n",
+    "\n",
+    "myAgent=Agent(bb, state_indices=[1], control_indices=[1])\n",
+    "myAgent2=Agent2(bb, state_indices=[1,2], control_indices=[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myAgent2.state_indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "bb.update_q_p_u_dict(myAgent)\n",
+    "bb.update_q_p_u_dict(myAgent2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "q_p_u_dict = bb.q_p_u_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "agents = [myAgent, myAgent2]\n",
+    "sync = Synchronizer(agents, bb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "q_mf, q_mf_dot, u_mf = get_blackboard_values(myAgent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us = propagate_dynamics(myAgent)\n",
+    "# forgot to pass in 'u_s' as a keyword argument\n",
+    "qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2 = propagate_dynamics(myAgent2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing plan:\n",
+    "    - Test this on a few nonzero inputs\n",
+    "    - Test this on multidimensional state\n",
+    "    - Test this on multidimensional control\n",
+    "    - Get this working for multiple agents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.  0.  0. -2.] [0.] [0.] [0.] [-1.] [array([0.])] [array([0.])] [array([0.])] [array([-1.])]\n",
+      "[ 0.         21.16546289  0.          0.40596919  0.         20.16546289\n",
+      "  0.        ] [0.         7.15453179] [0.        1.1035885] [0.         6.15453179] [0.] [array([0.        , 7.15453179])] [array([0.       , 1.1035885])] [array([0.        , 6.15453179])] [array([0.])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us\n",
+    "\n",
+    "print qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
    "metadata": {
     "collapsed": false
    },
@@ -898,24 +830,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 193,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# sync = Synchronizer(agents, bb)\n",
     "sync.synchronize()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
