Fixed Mean_Field_Test.ipynb sothat it correctly computes p_mf_0.  Before it was not calling L_mf_q_dot like it should (even though compute_p_mf_p_l was calling L_mf_q_dot, as it should).

--- a/Mean_Field_Test.ipynb
+++ b/Mean_Field_Test.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 195,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 196,
    "metadata": {
     "collapsed": false
    },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 197,
    "metadata": {
     "collapsed": true
    },
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 211,
    "metadata": {
     "collapsed": false
    },
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 212,
    "metadata": {
     "collapsed": false
    },
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 213,
    "metadata": {
     "collapsed": false
    },
@@ -624,9 +624,10 @@
     "    q_l_D_dot_0 = q_s_dot_0\n",
     "    q_l_D_0 = q_s_0\n",
     "\n",
-    "    # set initial conditions using values from blackboard retrieved above\n",
+    "    # set initial conditions (setup initial condition for) using values from blackboard retrieved above\n",
     "    p_l_0 = sliding_window_instance.L_l_q_dot(q_s_0, q_s_dot_0, u_s_0) # compute using Dirac compatibility\n",
     "    p_l_D_0 = sliding_window_instance.L_l_D_q_Dot(q_l_D_0, q_l_D_dot_0) # compute using Dirac compatibility\n",
+    "    p_mf_0 = sliding_window_instance.L_l_q_dot(q_mf, q_mf_dot, u_mf)\n",
     "    \n",
     "    # TODO: something seems wrong here.  This is computed identical to p_l_0, which seems very incorrect\n",
     "    \n",
@@ -634,7 +635,6 @@
     "    lambdas = sliding_window_instance.compute_lambdas(q_s_0, p_l_0, u_s_0)\n",
     "    H_l = sliding_window_instance.H_l(q_s_0, p_l_0, lambdas[0], u_s_0)\n",
     "    H_mf = sliding_window\n",
-    "    p_mf_0 = sliding_window_instance.L_l_q_dot(q_s_0, q_s_dot_0, u_s_0)\n",
     "    \n",
     "    # fill in qpu_vec with values from the blackboard, and then assign them to attribute sliding_window_instance\n",
     "    sliding_window_instance.qpu_vec = np.hstack([q_s_0, p_l_0, p_mf_0, u_s_0])\n",
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 214,
    "metadata": {
     "collapsed": false
    },
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 215,
    "metadata": {
     "collapsed": false
    },
@@ -715,7 +715,7 @@
        "[1, 2]"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 216,
    "metadata": {
     "collapsed": false
    },
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 217,
    "metadata": {
     "collapsed": false
    },
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 218,
    "metadata": {
     "collapsed": false
    },
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 219,
    "metadata": {
     "collapsed": false
    },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 220,
    "metadata": {
     "collapsed": false
    },
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 221,
    "metadata": {
     "collapsed": false
    },
@@ -819,18 +819,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 222,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> <ipython-input-213-0663d303688c>(50)sliding_window()\n",
+      "-> p_l_0 = sliding_window_instance.L_l_q_dot(q_s_0, q_s_dot_0, u_s_0) # compute using Dirac compatibility\n",
+      "(Pdb) q_s_0\n",
+      "array([0.])\n",
+      "(Pdb) q_s_dot_\n",
+      "*** NameError: name 'q_s_dot_' is not defined\n",
+      "(Pdb) q_s_dot_0\n",
+      "array([0.])\n",
+      "(Pdb) u_s_0\n",
+      "array([0.])\n",
+      "(Pdb) n\n",
+      "> <ipython-input-213-0663d303688c>(51)sliding_window()\n",
+      "-> p_l_D_0 = sliding_window_instance.L_l_D_q_Dot(q_l_D_0, q_l_D_dot_0) # compute using Dirac compatibility\n",
+      "(Pdb) n\n",
+      "> <ipython-input-213-0663d303688c>(52)sliding_window()\n",
+      "-> p_mf_0 = sliding_window_instance.L_l_q_dot(q_mf, q_mf_dot, u_mf)\n",
+      "(Pdb) p_l_D_0\n",
+      "1\n",
+      "(Pdb) n\n",
+      "> <ipython-input-213-0663d303688c>(57)sliding_window()\n",
+      "-> lambdas = sliding_window_instance.compute_lambdas(q_s_0, p_l_0, u_s_0)\n",
+      "(Pdb) p_mf_0\n",
+      "array([0., 2.])\n",
+      "(Pdb) sliding_window_instance.state_dim\n",
+      "1\n",
+      "(Pdb) sliding_window_instance.state_indices\n",
+      "[1]\n",
+      "(Pdb) # why are there two values in p_mf\n",
+      "*** SyntaxError: unexpected EOF while parsing (<stdin>, line 1)\n",
+      "(Pdb) print 'p_mf has two values becuase it is of dimension equal to the number of states in ENTIRE system'\n",
+      "p_mf has two values becuase it is of dimension equal to the number of states in ENTIRE system\n",
+      "(Pdb) exit()\n"
+     ]
+    },
+    {
+     "ename": "BdbQuit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mBdbQuit\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-222-d5ce11df3afc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mq_ls_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bars\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding_window\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyAgent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-213-0663d303688c>\u001b[0m in \u001b[0;36msliding_window\u001b[0;34m(sliding_window_instance)\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m     \u001b[0;31m# Construct local Hamiltonian of agent i\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m     \u001b[0mlambdas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_lambdas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_s_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_l_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_s_0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m     \u001b[0mH_l\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mH_l\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_s_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_l_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlambdas\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_s_0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m     \u001b[0mH_mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding_window\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-213-0663d303688c>\u001b[0m in \u001b[0;36msliding_window\u001b[0;34m(sliding_window_instance)\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m     \u001b[0;31m# Construct local Hamiltonian of agent i\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m     \u001b[0mlambdas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_lambdas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_s_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_l_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_s_0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m     \u001b[0mH_l\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mH_l\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_s_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_l_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlambdas\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_s_0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m     \u001b[0mH_mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding_window\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/bdb.pyc\u001b[0m in \u001b[0;36mtrace_dispatch\u001b[0;34m(self, frame, event, arg)\u001b[0m\n\u001b[1;32m     47\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;31m# None\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'line'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'call'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/bdb.pyc\u001b[0m in \u001b[0;36mdispatch_line\u001b[0;34m(self, frame)\u001b[0m\n\u001b[1;32m     66\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstop_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbreak_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muser_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquitting\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mraise\u001b[0m \u001b[0mBdbQuit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     69\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrace_dispatch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mBdbQuit\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "q_ls_bars, p_ls_bars, p_mfs_bars, u_bars = sliding_window(myAgent)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 210,
    "metadata": {
     "collapsed": false
    },
@@ -838,6 +892,15 @@
    "source": [
     "sync.synchronize()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
