Added computing H_l_D to the setup initial values part inside the sliding_window method.

--- a/Mean_Field_Test.ipynb
+++ b/Mean_Field_Test.ipynb
@@ -151,7 +151,7 @@
     "    def L_l_D_q_Dot(self, q_l_D, q_l_D_Dot):\n",
     "        # return  1-D array of dimension 1 by state_dim,\n",
     "        # each q_lD is a 1-D array of size 1 by state_dim array\n",
-    "        return 1\n",
+    "        return q_l_D\n",
     "    \n",
     "    def H_l_u_1(self, q_s, p_s):\n",
     "        return 1\n",
@@ -369,11 +369,11 @@
     "        # return scalar\n",
     "        return 1\n",
     "        \n",
-    "    def L_l_D_q_Dot(self, q_lD, p_lD):\n",
-    "        # return 1 by state_dim, 1-D array\n",
+    "    def L_l_D_q_Dot(self, q_l_D, q_l_D_Dot):\n",
+    "        # return  1-D array of dimension 1 by state_dim,\n",
     "        # each q_lD is a 1-D array of size 1 by state_dim array\n",
-    "        return 1\n",
-    "\n",
+    "        return q_l_D\n",
+    "    \n",
     "    def qp_rhs(self, t, qp_vec, **kwargs):\n",
     "        # u_s is constant (because of causality, remember?)\n",
     "        u_s = kwargs['u_0']\n",
@@ -624,12 +624,13 @@
     "    q_l_D_dot_0 = q_s_dot_0\n",
     "    q_l_D_0 = q_s_0\n",
     "\n",
-    "    # set initial conditions (setup initial condition for) using values from blackboard retrieved above\n",
+    "    # set initial conditions using values from blackboard retrieved above\n",
     "    p_l_0 = sliding_window_instance.L_l_q_dot(q_s_0, q_s_dot_0, u_s_0) # compute using Dirac compatibility\n",
     "    p_l_D_0 = sliding_window_instance.L_l_D_q_Dot(q_l_D_0, q_l_D_dot_0) # compute using Dirac compatibility\n",
-    "    p_mf_0 = sliding_window_instance.L_l_q_dot(q_mf, q_mf_dot, u_mf)\n",
+    "    H_l_D_0 = sliding_window_instance.H_l_D(q_l_D_0, p_l_D_0)\n",
     "    \n",
-    "    # TODO: something seems wrong here.  This is computed identical to p_l_0, which seems very incorrect\n",
+    "    # setup initial condition for p_mf\n",
+    "    p_mf_0 = sliding_window_instance.L_l_q_dot(q_mf, q_mf_dot, u_mf)\n",
     "    \n",
     "    # Construct local Hamiltonian of agent i\n",
     "    lambdas = sliding_window_instance.compute_lambdas(q_s_0, p_l_0, u_s_0)\n",
