--- a/Mean_Field_Test.ipynb
+++ b/Mean_Field_Test.ipynb
@@ -174,13 +174,17 @@
     "        # u_s is constant (because of causality, remember?)\n",
     "        u_s = kwargs['u_0']\n",
     "        state_dim = kwargs['state_dim']\n",
+    "        q_mf = kwargs['q_mf']\n",
+    "        q_mf_dot = kwargs['q_mf_dot']\n",
+    "        u_mf = kwargs['u_mf']\n",
+    "        \n",
     "        # TODO:  get a kwargs working for lambda_l\n",
     "        lambda_l = 0 # kwargs['lambda_l']\n",
     "        q_s = qp_vec[:state_dim]\n",
     "        p_l = qp_vec[state_dim:2*state_dim]\n",
     "        p_mf = qp_vec[2*state_dim:]\n",
-    "\n",
-    "        qp_rhs_H_mf = self.qp_rhs_H_mf(q_s, p_mf, u_s)\n",
+    "        \n",
+    "        qp_rhs_H_mf = self.qp_rhs_H_mf(q_mf, p_mf, u_mf)\n",
     "        p_rhs_H_mf = qp_rhs_H_mf[:state_dim]\n",
     "        q_rhs_H_mf = qp_rhs_H_mf[state_dim:]\n",
     "        \n",
@@ -204,7 +208,6 @@
     "        # iterate through agents in the blackboard\n",
     "        qp_vec = kwargs['qp_vec']\n",
     "        \n",
-    "        self.gamma\n",
     "        u_dot = -1*self.Gamma*(self.gamma)\n",
     "        return u_dot\n",
     "\n",
@@ -378,13 +381,16 @@
     "        # u_s is constant (because of causality, remember?)\n",
     "        u_s = kwargs['u_0']\n",
     "        state_dim = kwargs['state_dim']\n",
+    "        q_mf = kwargs['q_mf']\n",
+    "        q_mf_dot = kwargs['q_mf_dot']\n",
+    "        u_mf = kwargs['u_mf']\n",
+    "        \n",
     "        # TODO:  get a kwargs working for lambda_l\n",
     "        lambda_l = 0 # kwargs['lambda_l']\n",
     "        q_s = qp_vec[:state_dim]\n",
     "        p_l = qp_vec[state_dim:2*state_dim]\n",
     "        p_mf = qp_vec[2*state_dim:]\n",
-    "\n",
-    "\n",
+    "        \n",
     "        qp_rhs_H_mf = self.qp_rhs_H_mf(q_mf, p_mf, u_mf)\n",
     "        p_rhs_H_mf = qp_rhs_H_mf[:state_dim]\n",
     "        q_rhs_H_mf = qp_rhs_H_mf[state_dim:]\n",
