Two bugs were fixed inside of qp_rhs: -	p_rhs_H_mf and q_rhs_H_mf were switched -	pass in q_s instead of q_mf.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -179,10 +179,10 @@
     "        p_l = qp_vec[state_dim:2*state_dim]\n",
     "        p_mf = qp_vec[2*state_dim:]\n",
     "        \n",
-    "        qp_rhs_H_mf = self.qp_rhs_H_mf(q_mf, p_mf, u_mf)\n",
-    "        p_rhs_H_mf = qp_rhs_H_mf[:state_dim]\n",
-    "        q_rhs_H_mf = qp_rhs_H_mf[state_dim:]\n",
-    "        import pdb; pdb.set_trace()\n",
+    "        qp_rhs_H_mf = self.qp_rhs_H_mf(q_s, p_mf, u_mf)\n",
+    "        q_rhs_H_mf = qp_rhs_H_mf[:state_dim]\n",
+    "        p_rhs_H_mf = qp_rhs_H_mf[state_dim:]\n",
+    "\n",
     "        qp_rhs_H_l = self.qp_rhs_H_l(q_s, p_l, u_s, lambda_l)\n",
     "        q_rhs_H_l = qp_rhs_H_l[:state_dim]\n",
     "        p_rhs_H_l = qp_rhs_H_l[state_dim:]\n",
