--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -816,39 +816,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ode error: global name 'q_mf' is not defined\n",
-      "ode error: object of type 'numpy.int64' has no len()\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "too many indices for array",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-74-c613c45b7e8d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mqpu_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mus\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpropagate_dynamics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyAgent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# forgot to pass in 'u_s' as a keyword argument\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mqpu_vec2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mus2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpropagate_dynamics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyAgent2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/jordan/Documents/Atigeo/cdi/control_law_propagator/sliding_window.pyc\u001b[0m in \u001b[0;36mpropagate_dynamics\u001b[0;34m(sliding_window_instance)\u001b[0m\n\u001b[1;32m    144\u001b[0m         \u001b[0;31m# retrieve values from blackboard to pass in as kwargs to the rhs functions inside of propagate_q_p and propagate_u\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    145\u001b[0m         \u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_blackboard_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msliding_window_instance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 146\u001b[0;31m         \u001b[0mqp_vecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpropagate_q_p\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqpu_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# assume \"u\" constant, and propagate q and p\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    147\u001b[0m         \u001b[0;31m# prepend initial condition for q and p for propagating u\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    148\u001b[0m         \u001b[0mlhs_qp_vecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mqpu_vec\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mqp_vecs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# last item in qpu_vec is \"u\", so leave it out. last item in qp_vecs is the last point in propagation (since we are using left hand side of q and p - leave it out.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/jordan/Documents/Atigeo/cdi/control_law_propagator/sliding_window.pyc\u001b[0m in \u001b[0;36mpropagate_q_p\u001b[0;34m(qpu_vec, t_start, t_end, sliding_window_instance, q_mf, q_mf_dot, u_mf)\u001b[0m\n\u001b[1;32m    198\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    199\u001b[0m         \u001b[0;31m# rk23 returns 2 arrays but we remove the first array by doing qp_vec[1] because rk_23 returns the initial value you passed in\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 200\u001b[0;31m         \u001b[0mqp_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mqp_vec\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    201\u001b[0m         \u001b[0mqp_vecs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqp_vec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    202\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mqp_vecs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: too many indices for array"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# forgot to pass in 'u_s' as a keyword argument\n",
     "qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us = propagate_dynamics(myAgent)\n",
     "# forgot to pass in 'u_s' as a keyword argument\n",
-    "qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2 = propagate_dynamics(myAgent2)"
+    "# qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2 = propagate_dynamics(myAgent2)"
    ]
   },
   {
@@ -864,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
@@ -873,25 +851,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.  0.  0. -2.] [0.] [0.] [0.] [-1.] [array([0.])] [array([0.])] [array([0.])] [array([-1.])]\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'qpu_vec2' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-69-26b28b194d7d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mqpu_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mus\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mqpu_vec2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mus2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'qpu_vec2' is not defined"
+      "[ 0.  0.  0. -6.] [0.] [0.] [0.] [-5.] [array([0.])] [array([0.])] [array([0.])] [array([-5.])]\n"
      ]
     }
    ],
    "source": [
     "print qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us\n",
     "\n",
-    "print qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2"
+    "# print qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2"
    ]
   },
   {
@@ -913,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
@@ -924,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -935,7 +902,7 @@
        "[('1', 0), ('2', 2)]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
@@ -1038,12 +1005,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "q_ls_bars, p_ls_bars, p_mfs_bars, u_bars = sliding_window(myAgent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ode error: global name 'q_mf' is not defined\n",
+      "ode error: object of type 'numpy.float64' has no len()\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for array",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-84-d70db86759c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msync\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msynchronize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-57-62870f8ca51c>\u001b[0m in \u001b[0;36msynchronize\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     25\u001b[0m             '''\n\u001b[1;32m     26\u001b[0m             \u001b[0;31m# run propagation with keyword arguments state_dim_l, state_dim_mf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m             \u001b[0msliding_window\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0magent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mL_mf_q_dot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-82-a8afc7c0bbd8>\u001b[0m in \u001b[0;36msliding_window\u001b[0;34m(sliding_window_instance)\u001b[0m\n\u001b[1;32m     68\u001b[0m         \u001b[0;31m# this propagates a single window\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m         \u001b[0;31m# inside of propagate dynamics\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m         \u001b[0mqpu_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ls_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mus\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpropagate_dynamics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msliding_window_instance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m         \u001b[0;31m# qs, ps, and us will go to Mean Field somehow\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/jordan/Documents/Atigeo/cdi/control_law_propagator/sliding_window.pyc\u001b[0m in \u001b[0;36mpropagate_dynamics\u001b[0;34m(sliding_window_instance)\u001b[0m\n\u001b[1;32m    144\u001b[0m         \u001b[0;31m# retrieve values from blackboard to pass in as kwargs to the rhs functions inside of propagate_q_p and propagate_u\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    145\u001b[0m         \u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_blackboard_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msliding_window_instance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 146\u001b[0;31m         \u001b[0mqp_vecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpropagate_q_p\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqpu_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# assume \"u\" constant, and propagate q and p\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    147\u001b[0m         \u001b[0;31m# prepend initial condition for q and p for propagating u\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    148\u001b[0m         \u001b[0mlhs_qp_vecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mqpu_vec\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mqp_vecs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# last item in qpu_vec is \"u\", so leave it out. last item in qp_vecs is the last point in propagation (since we are using left hand side of q and p - leave it out.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/jordan/Documents/Atigeo/cdi/control_law_propagator/sliding_window.pyc\u001b[0m in \u001b[0;36mpropagate_q_p\u001b[0;34m(qpu_vec, t_start, t_end, sliding_window_instance, q_mf, q_mf_dot, u_mf)\u001b[0m\n\u001b[1;32m    198\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    199\u001b[0m         \u001b[0;31m# rk23 returns 2 arrays but we remove the first array by doing qp_vec[1] because rk_23 returns the initial value you passed in\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 200\u001b[0;31m         \u001b[0mqp_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mqp_vec\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    201\u001b[0m         \u001b[0mqp_vecs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqp_vec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    202\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mqp_vecs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: too many indices for array"
+     ]
+    }
+   ],
+   "source": [
+    "sync.synchronize()"
+   ]
   },
   {
    "cell_type": "code",
