changed the method get_blackboard_values to more appropriate name of construct_mf_vectors

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -735,7 +735,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Synchronizer instance at 0x104d89bd8>"
+       "<__main__.Synchronizer instance at 0x104ca2560>"
       ]
      },
      "execution_count": 14,
@@ -780,7 +780,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Agent instance at 0x104d5c098>"
+       "<__main__.Agent instance at 0x104c87200>"
       ]
      },
      "execution_count": 15,
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -935,7 +935,7 @@
     "    t = t_0 # wall clock time\n",
     "    \n",
     "    # Read from blackboard to get the following observation measured at time t_0\n",
-    "    q_mf, q_mf_dot, u_mf = get_blackboard_values(sliding_window_instance)\n",
+    "    q_mf, q_mf_dot, u_mf = construct_mf_vectors(sliding_window_instance)\n",
     "    \n",
     "    # now pick out the individual states that we need to make q_s and q_s_dot\n",
     "    qpu_vec = sliding_window_instance.qpu_vec\n",
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -1014,6 +1014,24 @@
    "source": [
     "sync.synchronize()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
