--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -934,7 +934,13 @@
     "    q_ls_bars, p_ls_bars, p_mfs_bars, u_bars = [], [], [], []\n",
     "    t = t_0 # wall clock time\n",
     "    \n",
-    "    # Read from blackboard to get the following observation measured at time t_0\n",
+    "    # Read from blackboard to get the following observations measured at time t_0\n",
+    "    bb = sliding_window_instance.bb\n",
+    "\n",
+    "    q_s = bb.q_p_u_dict['q_s']\n",
+    "    q_s_dot = bb.q_p_u_dict['q_s_dot']\n",
+    "    u_s = bb.q_p_u_dict['u_s']\n",
+    "    sliding_window_instance.qpu_vec =  np.concatenate([])  # fill in with blackboard values for q and u, but for p, must be computed\n",
     "    q_mf, q_mf_dot, u_mf = construct_mf_vectors(sliding_window_instance)\n",
     "    \n",
     "    # now pick out the individual states that we need to make q_s and q_s_dot\n",
