--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -735,7 +735,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Synchronizer instance at 0x104ca2560>"
+       "<__main__.Synchronizer instance at 0x104cefb90>"
       ]
      },
      "execution_count": 14,
@@ -780,7 +780,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Agent instance at 0x104c87200>"
+       "<__main__.Agent instance at 0x104bf7cb0>"
       ]
      },
      "execution_count": 15,
@@ -935,11 +935,8 @@
     "    t = t_0 # wall clock time\n",
     "    \n",
     "    # Read from blackboard to get the following observations measured at time t_0\n",
-    "    bb = sliding_window_instance.bb\n",
-    "\n",
-    "    q_s = bb.q_p_u_dict['q_s']\n",
-    "    q_s_dot = bb.q_p_u_dict['q_s_dot']\n",
-    "    u_s = bb.q_p_u_dict['u_s']\n",
+    "    q_s, q_s_dot, u_s = construct_local_vectors(sliding_window_instance)\n",
+    "    import pdb; pdb.set_trace()\n",
     "    sliding_window_instance.qpu_vec =  np.concatenate([])  # fill in with blackboard values for q and u, but for p, must be computed\n",
     "    q_mf, q_mf_dot, u_mf = construct_mf_vectors(sliding_window_instance)\n",
     "    \n",
@@ -949,9 +946,9 @@
     "    # a note on q_s_dot - normally I understand that this would come from the sensors, ...\n",
     "    # ...but for now get it from q_mf_dot from the blackboard, and just select if from the states that pertain to this agent\n",
     "    # TODO: create helper function to do this business of getting local values from mean field vectors\n",
-    "    q_s_0 = np.array([q_mf[sliding_window_instance.state_indices[state_ix-1]-1] for state_ix in sliding_window_instance.state_indices])\n",
-    "    q_s_dot_0 = np.array([q_mf_dot[sliding_window_instance.state_indices[state_ix-1]-1] for state_ix in sliding_window_instance.state_indices])\n",
-    "    u_s_0 = np.array([u_mf[sliding_window_instance.control_indices[control_ix-1]-1] for control_ix in sliding_window_instance.control_indices])\n",
+    "#     q_s_0 = np.array([q_mf[sliding_window_instance.state_indices[state_ix-1]-1] for state_ix in sliding_window_instance.state_indices])\n",
+    "#     q_s_dot_0 = np.array([q_mf_dot[sliding_window_instance.state_indices[state_ix-1]-1] for state_ix in sliding_window_instance.state_indices])\n",
+    "#     u_s_0 = np.array([u_mf[sliding_window_instance.control_indices[control_ix-1]-1] for control_ix in sliding_window_instance.control_indices])\n",
     "    \n",
     "    # construct quenched mean field for Hamiltonian agent i\n",
     "    # this happens inside of the class Synchronize method\n",
@@ -1005,14 +1002,54 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> <ipython-input-21-2c8bbf4b2a99>(30)sliding_window()\n",
+      "-> sliding_window_instance.qpu_vec =  np.concatenate([])  # fill in with blackboard values for q and u, but for p, must be computed\n",
+      "(Pdb) l\n",
+      " 25  \t    t = t_0 # wall clock time\n",
+      " 26  \t    \n",
+      " 27  \t    # Read from blackboard to get the following observations measured at time t_0\n",
+      " 28  \t    q_s, q_s_dot, u_s = construct_local_vectors(sliding_window_instance)\n",
+      " 29  \t    import pdb; pdb.set_trace()\n",
+      " 30  ->\t    sliding_window_instance.qpu_vec =  np.concatenate([])  # fill in with blackboard values for q and u, but for p, must be computed\n",
+      " 31  \t    q_mf, q_mf_dot, u_mf = construct_mf_vectors(sliding_window_instance)\n",
+      " 32  \t    \n",
+      " 33  \t    # now pick out the individual states that we need to make q_s and q_s_dot\n",
+      " 34  \t    qpu_vec = sliding_window_instance.qpu_vec\n",
+      " 35  \t    state_dim = sliding_window_instance.state_dim\n",
+      "(Pdb) n\n",
+      "ValueError: 'need at least one array to concatenate'\n",
+      "> <ipython-input-21-2c8bbf4b2a99>(30)sliding_window()\n",
+      "-> sliding_window_instance.qpu_vec =  np.concatenate([])  # fill in with blackboard values for q and u, but for p, must be computed\n",
+      "(Pdb) exit()\n"
+     ]
+    },
+    {
+     "ename": "BdbQuit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mBdbQuit\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-d5ce11df3afc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mq_ls_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bars\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding_window\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyAgent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-21-2c8bbf4b2a99>\u001b[0m in \u001b[0;36msliding_window\u001b[0;34m(sliding_window_instance)\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0mq_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_s_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_s\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconstruct_local_vectors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msliding_window_instance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;32mimport\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m     \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mqpu_vec\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# fill in with blackboard values for q and u, but for p, must be computed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m     \u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconstruct_mf_vectors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msliding_window_instance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/bdb.pyc\u001b[0m in \u001b[0;36mtrace_dispatch\u001b[0;34m(self, frame, event, arg)\u001b[0m\n\u001b[1;32m     53\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_return\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'exception'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 55\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_exception\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     56\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'c_call'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrace_dispatch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/bdb.pyc\u001b[0m in \u001b[0;36mdispatch_exception\u001b[0;34m(self, frame, arg)\u001b[0m\n\u001b[1;32m     95\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstop_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     96\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muser_exception\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 97\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquitting\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mraise\u001b[0m \u001b[0mBdbQuit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     98\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrace_dispatch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mBdbQuit\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "q_ls_bars, p_ls_bars, p_mfs_bars, u_bars = sliding_window(myAgent)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
